# MoneyMinder

./: CMakeLists.txt  MoneyMinder.sln  README.MD  vcpkg.json
MoneyMinder/: MM_ResourceFile.rc  MoneyMinder.vcxproj  MoneyMinder.vcxproj.filters  MoneyMinderMain.cpp  resource.h
